--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.2",
-    "@vitejs/plugin-react": "^4.3.1"
+    "vite": "^5.4.2"
   }
 }
